Fixed file path not wrapping

--- a/css/app.css
+++ b/css/app.css
@@ -11,6 +11,10 @@ code {
   color: white;
 }
 
+em {
+  overflow: scroll;
+}
+
 .page-container {
   height: auto;
   padding-top: 5vh;
@@ -25,6 +29,12 @@ code {
   padding: 1rem;
   border: 2px solid #80ed99;
   border-radius: 15px;
+}
+
+.wrap-container {
+  overflow-wrap: break-word;
+  word-break: break-word;
+  white-space: normal;
 }
 
 .scrollable-container {
