--- a/scss/basics/reset.scss
+++ b/scss/basics/reset.scss
@@ -10,3 +10,7 @@ body {
 code {
   color: white
 }
+
+em {
+  overflow: scroll;
+}
